<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home_page"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_students"
                android:icon="@drawable/student"
                android:title="@string/menu_students"/>
        <item
                android:id="@+id/nav_appointments"
                android:icon="@drawable/appointment"
                android:title="@string/menu_appointments"/>
        <item
                android:id="@+id/nav_assignments"
                android:icon="@drawable/assignment"
                android:title="@string/assignments"/>
    </group>
</menu>