<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    xmlns:tools="http://schemas.android.com/tools"
                    tools:context=".ui.assignments.AddAssignmentFragment">
        <TextView
                android:text="@string/assignment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/assignment_name_txt"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:textSize="20sp"/>
        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/assignment_name_edit"
                  android:layout_below="@id/assignment_name_txt"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="10dp"
                  android:autofillHints="Enter assignments name"
                  android:hint="@string/enter_assignments_name"
                  android:inputType="textPersonName|textCapWords"
                  android:maxLength="25"/>
        <TextView
                android:text="@string/assignment_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/assignment_description_txt"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_below="@id/assignment_name_edit"
                android:textSize="20sp"/>
        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/assignment_description_edit"
                  android:layout_below="@id/assignment_description_txt"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="10dp"
                  android:autofillHints="Enter assignments description"
                  android:hint="@string/enter_assignments_description"
                  android:inputType="textCapWords"
                  android:maxLength="100"/>
        <TextView
                android:text="@string/assignments_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/assignment_content_txt"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:layout_below="@id/assignment_description_edit"/>
        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/assignment_content_edit"
                  android:layout_below="@id/assignment_content_txt"
                  android:layout_marginStart="30dp"
                  android:layout_marginTop="10dp"
                  android:hint="@string/enter_assignments_content"
                  android:autofillHints="@string/enter_assignments_content"
                  android:inputType="textMultiLine"
                  android:scrollbars="vertical"
                  android:maxLines="8"
                  android:maxLength="1000"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/cancel"
                android:layout_marginStart="6dp"
                android:id="@+id/assignment_cancel_but"
                android:layout_below="@id/assignment_content_edit"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="6dp"
                android:text="@string/add"
                android:id="@+id/assignment_add_but"
                android:layout_below="@id/assignment_content_edit"/>

    </RelativeLayout>


</ScrollView>