<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.korki.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_students"
            android:name="com.example.korki.ui.students.GalleryFragment"
            android:label="@string/menu_students"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_appointments"
            android:name="com.example.korki.ui.appointments.AppointmentsFragment"
            android:label="@string/menu_appointments"
            tools:layout="@layout/fragment_appointments"/>
</navigation>