<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:context=".ui.assignments.EmailAssignmentFragment">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/add_assignment_data"
                android:layout_above="@id/email_assignment_buttons">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:id="@+id/assignment_name_txt_email"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:id="@+id/assignment_name_content_email"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:text="@string/choose_student"
              android:id="@+id/choose_student_txt"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:id="@+id/students_spinner"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="60dp"
              android:layout_marginStart="20dp"
              android:text="@string/student_email_address"
              android:id="@+id/assignment_student_email_address_txt"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:id="@+id/assignment_student_email_address_content"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:text="@string/re"
              android:id="@+id/assignment_email_subject_txt"/>
    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:id="@+id/assignment_email_subject_content"
              android:hint="@string/enter_email_subject"
              android:autofillHints="enter_email_subject"
              android:maxLength="50"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:text="@string/email_message"
              android:id="@+id/assignment_email_message_txt"/>
    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="20dp"
              android:hint="@string/enter_message"
              android:autofillHints="enter_message"
              android:inputType="textMultiLine"
              android:id="@+id/assignment_email_message_content"
              android:scrollbars="vertical"
              android:maxLines="20"
              android:maxLength="1000"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:id="@+id/email_assignment_buttons">

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:text="@string/cancel"
            android:layout_marginStart="6dp"
            android:id="@+id/cancel_but"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"
            android:text="@string/send"
            android:id="@+id/send_but"/>

    </RelativeLayout>

</RelativeLayout>