<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.home.HomeFragment">

    <ImageView android:layout_width="150dp"
               android:layout_height="150dp"
               app:srcCompat="@drawable/cork"
               android:layout_centerHorizontal="true"
               android:id="@+id/korki_img"
               android:contentDescription="@string/korki"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/welcome"
              android:textSize="40sp"
              android:gravity="center"
              android:layout_below="@id/korki_img"
              android:id="@+id/hello"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/future_appointments"
              android:textSize="22sp"
              android:layout_marginStart="10dp"
              android:layout_marginBottom="10dp"
              android:layout_below="@+id/hello"
              android:id="@+id/future_appointments_label"/>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/future_appointments_label"
            android:id="@+id/appointments_list"
    />

</RelativeLayout>